--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "staudenmeir/laravel-adjacency-list": "^v1.10.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "nesbot/carbon": "^2.62.1"
     },
     "autoload": {
         "psr-4": {
