--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,13 @@
         }
     ],
     "require": {
-        "php": "^8.0.2",
-        "illuminate/database": "^9.0",
-        "staudenmeir/eloquent-eager-limit-x-laravel-cte": "v1.0",
-        "staudenmeir/laravel-adjacency-list": "^v1.10.1"
+        "php": "^8.1",
+        "illuminate/database": "^10.0",
+        "staudenmeir/eloquent-eager-limit-x-laravel-cte": "^1.1",
+        "staudenmeir/laravel-adjacency-list": "^1.13"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "nesbot/carbon": "^2.62.1"
+        "phpunit/phpunit": "^9.5.27"
     },
     "autoload": {
         "psr-4": {
