--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "nesbot/carbon": "^2.62.1"
+        "nesbot/carbon": "^2.62.1",
+        "staudenmeir/eloquent-has-many-deep": "^1.17"
     },
     "autoload": {
         "psr-4": {
