--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require-dev": {
         "doctrine/dbal": "^3.5.2",
         "phpunit/phpunit": "^10.1",
-        "staudenmeir/eloquent-has-many-deep": "^1.18"
+        "staudenmeir/eloquent-has-many-deep": "^1.18",
+        "phpstan/phpstan": "^1.10"
     },
     "autoload": {
         "psr-4": {
