Sort Composer packages

--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     },
     "require-dev": {
         "doctrine/dbal": "^3.5.2",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.1",
-        "staudenmeir/eloquent-has-many-deep": "^1.18",
-        "phpstan/phpstan": "^1.10"
+        "staudenmeir/eloquent-has-many-deep": "^1.18"
     },
     "autoload": {
         "psr-4": {
@@ -33,5 +33,8 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "sort-packages": true
+    }
 }
