--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,9 @@
             "Staudenmeir\\LaravelAdjacencyList\\Tests\\": "tests/LaravelAdjacencyList"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "config": {
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
